# UDP

./: CMakeLists.txt
Client/: CMakeLists.txt  client.cpp  client.h  clientwindow.cpp  clientwindow.h  clientwindow.ui
UDPServer/: CMakeLists.txt  connection.cpp  connection.h  main.cpp  messagetypes.h  server.cpp  server.h
